# hsn-cpp

./: .gitignore  CMakeLists.txt  LICENSE
include/: version.hpp.in.cmake
test/: CMakeLists.txt
test/01example/: test.cpp
test/02example/: CMakeLists.txt  test.cpp
